@@ -4,7 +4,7 @@
 
 JAVA_PKG_IUSE="source doc"
 
-IS_MODELLO_EBUILD="y"
+JAVA_MAVEN_ADD_GENERATED_STUFF="y"
 JAVA_MAVEN_BOOTSTRAP="Y"
 inherit java-maven-2
 
@@ -14,11 +14,15 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="source doc"
-DEP="=dev-java/plexus-container-default-1.0_alpha9
-dev-java/plexus-utils"
-DEPEND=">=virtual/jdk-1.4 ${DEP}"
-RDEPEND=">=virtual/jre-1.4 ${DEP}"
-JAVA_MAVEN_CLASSPATH="plexus-container-default-1.0_alpha9
-plexus-utils"
+COMMON_DEPS="
+dev-java/plexus-container-default
+dev-java/plexus-utils
+"
+DEPEND=">=virtual/jdk-1.4 ${COMMON_DEPS}"
+RDEPEND=">=virtual/jre-1.4 ${COMMON_DEPS}"
+JAVA_MAVEN_CLASSPATH="
+plexus-container-default
+plexus-utils
+"
 
 JAVA_PKG_SRC_DIRS="src/main/java/*"
